# ogre_v21_example

./: .gitignore  Dockerfile  LICENSE  README.md  README.rst  build_python.sh  build_qt.sh  build_rtt.sh  build_sdl.sh  create_plugins_config.sh  environment.yml  plugins_tools.cfg
Media/boostercube/: boostercube.material  boostercube.mesh
python/: Makefile  pyqt_demo.py  setup.py
python/src/: archive.pxd  archive_manager.pxd  azOgre.pyx  basic.pxd  camera.pxd  camera.pyx  compositor.pxd  compositor.pyx  compositor_shadow_node.pxd  compositor_shadow_node.pyx  frame_stats.pxd  frame_stats.pyx  frustum.pxd  hlms.pxd  hlms.pyx  hlms_blendblock.pxd  hlms_blendblock.pyx  hlms_datablock.pxd  hlms_datablock.pyx  hlms_macroblock.pxd  hlms_macroblock.pyx  hlms_manager.pxd  hlms_manager.pyx  hlms_pbs.pxd  hlms_unlit.pxd  item.pxd  item.pyx  light.pxd  light.pyx  mesh.pxd  movable_object.pxd  overlay.pxd  overlay.pyx  overlay_container.pxd  overlay_container.pyx  overlay_manager.pxd  overlay_manager.pyx  overlay_system.pxd  overlay_system.pyx  render_queue_listener.pxd  (+16 more)
qt/: CMakeLists.txt
qt/cmake/: QtCommon.cmake
qt/src_qt/: OgreDemoQt.cpp  OgreDemoQt.hpp  main.cpp
recipes/ogre/: build.sh
recipes/ogre110/: meta.yaml
recipes/ogre21/: meta.yaml
recipes/sdl/: build.sh  meta.yaml
rtt/: CMakeLists.txt
rtt/src_rtt/: OgreDemoRTT.cpp  OgreDemoRTT.hpp
sdl/: CMakeLists.txt
sdl/src_sdl/: OgreDemoSDL.cpp  OgreDemoSDL.hpp
